--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,11 @@
     <string name="delete_button">Delete</string>
     <string name="done_button">Done</string>
     <string name="to_tasks_button">To tasks!</string>
+    <string name="pet_name_intro">Name:</string>
+    <string name="pet_name_edit">Name here</string>
+    <string name="alert_title">Delete task</string>
+    <string name="alert_message">Are you sure you want to delete this task?</string>
+    <string name="alert_positive">Yes</string>
+    <string name="alert_negative">No</string>
 
 </resources>
