--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="alert_message">Are you sure you want to delete this task?</string>
     <string name="alert_positive">Yes</string>
     <string name="alert_negative">No</string>
+    <string name="pet_status_happy">happy!</string>
 
 </resources>
