--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name="alert_positive">Yes</string>
     <string name="alert_negative">No</string>
     <string name="pet_status_happy">happy!</string>
+    <string name="pet_status_sad">sad...</string>
 
 </resources>
