--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,6 @@
     <string name="edit_due_date_day">DD</string>
     <string name="toast_message">Please enter a valid date</string>
     <string name="welcome_message">Welcome to Tamagotchi To Do!</string>
+    <string name="snackbar_message">Task finished! Good job!</string>
 
 </resources>
